// Product Service - Internal gRPC API for inter-service communication.

syntax = "proto3";

option csharp_namespace = "EShop.Grpc.Product";

package product;

service ProductService {

  // Get all product info.
  rpc GetAllProducts(GetAllProductsRequest) returns (GetProductsResponse);

  // Reserve stock for order. All-or-nothing: fails if any item has insufficient stock.
  rpc ReserveStock(ReserveStockRequest) returns (ReserveStockResponse);

  // Release stock reservation. Idempotent: succeeds even if already released.
  rpc ReleaseStock(ReleaseStockRequest) returns (ReleaseStockResponse);
}

message GetProductsResponse {
  repeated ProductInfo products = 1;
}

message GetAllProductsRequest {}

message ProductInfo {
  string product_id = 1;
  string name = 2;
  string description = 3;
  string price = 4;  // decimal as string
  int32 stock_quantity = 5;
}

message ReserveStockRequest {
  string order_id = 1;
  repeated OrderItem items = 2;
}

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
}

message ReserveStockResponse {
  bool success = 1;
  optional string failure_reason = 2;
  ErrorCode error_code = 3;
}

enum ErrorCode {
  ERROR_CODE_NONE = 0;
  ERROR_CODE_INSUFFICIENT_STOCK = 1;
  ERROR_CODE_PRODUCT_NOT_FOUND = 2;
}

message ReleaseStockRequest {
  string order_id = 1;
}

message ReleaseStockResponse {
  bool success = 1;
  optional string failure_reason = 2;
}
